[inspector] fix crash in wrapping result for async Runtime.evaluate

BUG=chromium:651211,chromium:650965
R=dgozman@chromium.org

Review-Url: https://codereview.chromium.org/2376143002
Cr-Commit-Position: refs/heads/master@{#39844}